--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<div class="grid">
 			<div class="columns large-10 large-offset-1">
 				<h2>Introduction</h2>
-				<h6 class="font-text color-grey">This site will be used to showcase key milestones, outputs and be used to get your input throughout the project. We want you be as involved in this process as you would like to be and will strive to incorporate your input as we develop this platform. </h6>
+				<p class="caption">This site will be used to showcase key milestones, outputs and be used to get your input throughout the project. We want you be as involved in this process as you would like to be and will strive to incorporate your input as we develop this platform. </p>
 
 				<hr>
 
