--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 				<hr>
 
-				<h3>Project Summary <a href="" class="small">Link to PDF</a></h3>
+				<h3>Project Summary</h3>
 				<h4>Objectives</h4>
 				<p>This document provides a 1 page overview of what this project is and what is taking place for each web property, and who will be involved from our teams.</p>
 
@@ -98,47 +98,49 @@
 
 				<hr class="hidden">
 
-				<h5 class="color-blue">Landscape Analysis<span>May 6 – May 25</span></h5>
+				<div class="blue">
+					<h5 class="color-blue">Landscape Analysis<span>May 6 – May 25</span></h5>
 
-				<p>The Landscape analysis and current state review involves the following phases:</p>
-				<ul>
-					<li>Strategy &amp; scope definition workshop</li>
-					<li>Knowledge Transfer around Micro Data Library, Open Data Catalogue, Data Deposit, External Open Data and other Data Sources to be identified</li>
-					<li>Literature Review</li>
-				</ul>
+					<p>The Landscape analysis and current state review involves the following phases:</p>
+					<ul>
+						<li>Strategy &amp; scope definition workshop</li>
+						<li>Knowledge Transfer around Micro Data Library, Open Data Catalogue, Data Deposit, External Open Data and other Data Sources to be identified</li>
+						<li>Literature Review</li>
+					</ul>
 
-				<p>The outcomes of this Landscape Analysis are:</p>
+					<p>The outcomes of this Landscape Analysis are:</p>
 
-				<ul>
-					<li>Create context for Workshop Design</li>
-					<li>Provide initial validation of Findings Mapping of final Strategy Report</li>
-				</ul>
+					<ul>
+						<li>Create context for Workshop Design</li>
+						<li>Provide initial validation of Findings Mapping of final Strategy Report</li>
+					</ul>
 
-				<p>The analysis and review document will take close consideration of the Data Deposit, Central Internal Catalog, External Open Data and Micro Data Library Catalogs and other data systems and reports around World Bank Group data strategy developed to date. The objective of this document is to provide context for the workshops and provide a clear starting point to learn from what currently works and does not work within various data systems available.</p>
+					<p>The analysis and review document will take close consideration of the Data Deposit, Central Internal Catalog, External Open Data and Micro Data Library Catalogs and other data systems and reports around World Bank Group data strategy developed to date. The objective of this document is to provide context for the workshops and provide a clear starting point to learn from what currently works and does not work within various data systems available.</p>
 
-				<h6>Documents and Deliverables</h6>
+					<h6>Documents and Deliverables</h6>
 
-				<ul>
-					<li><a href="">Landscape Review Document 1</a></li>
-					<li><a href="">Landscape Review Document 2</a></li>
-					<li><a href="">Landscape Review Document 3</a></li>
-				</ul>
+					<ul>
+						<li><a href="">Landscape Review Document 1</a></li>
+						<li><a href="">Landscape Review Document 2</a></li>
+						<li><a href="">Landscape Review Document 3</a></li>
+					</ul>
 
-				<h6>Team Lead(s)</h6>
-				<ul class="leads">
-					<li>
-						<a href="">
-							<img src="assets/images/team/nm-profile.jpg" />
-							<p>Neisan</p>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="assets/images/team/cb-profile.jpg" />
-							<p>Chad</p>
-						</a>
-					</li>
-				</ul>
+					<h6>Team Lead(s)</h6>
+					<ul class="leads">
+						<li>
+							<a href="">
+								<img src="assets/images/team/nm-profile.jpg" />
+								<p>Neisan</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<img src="assets/images/team/cb-profile.jpg" />
+								<p>Chad</p>
+							</a>
+						</li>
+					</ul>
+				</div>
 
 				<hr class="hidden">
 
