--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
   
-	<title>PPP Project Site | Bivee Inc, Aten Design Group</title>
+	<title>DDH</title> Project Site | Bivee Inc, SecondMuse</title>
 
 	<!-- // Site Info
 	====================================
@@ -21,7 +21,7 @@
 	Author:   	Nicholas Kingston
 
 	Notes:    	Congratulations! You are a nerd like us!
-				Maybe check out the github page?
+			Maybe check out the github page?
 
 	Git:      	http://www.github.com/biveeco/ddh
 
@@ -54,7 +54,7 @@
 			
 		</ul>
 		<ul id="menu" class="desktop">
-			<li><a>Data Development Hub</a></li>
+			<li>Data Development Hub</li>
 		</ul>
 		</div></div>
 	</nav>
@@ -65,7 +65,7 @@
 				<article class="grid">
 					<div class="columns large-12">
 						<h2>Data Development Hub (DDH)</h2>
-						<h4 class="font-text">Project Status Site (May 6 – Aug 31, 2015)</h4>
+						<h4 class="font-text">Project Site (May 6 – Aug 31, 2015)</h4>
 					</div>
 				</article>
 			</div>
