--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			
 		</ul>
 		<ul id="menu" class="desktop">
-			<li>Data Development Hub</li>
+			<li>Development Data Hub</li>
 		</ul>
 		</div></div>
 	</nav>
@@ -64,7 +64,7 @@
 			<div class="inner">
 				<article class="grid">
 					<div class="columns large-12">
-						<h2>Data Development Hub (DDH)</h2>
+						<h2>Development Data Hub (DDH)</h2>
 						<h4 class="font-text">Project Site (May 6 – Aug 31, 2015)</h4>
 					</div>
 				</article>
