--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
   
-	<title>DDH</title> Project Site | Bivee Inc, SecondMuse</title>
+	<title>DDH Project Site | Bivee Inc, SecondMuse</title>
 
 	<!-- // Site Info
 	====================================
