--- a/index.html
+++ b/index.html
@@ -76,54 +76,39 @@
 		<div class="grid">
 			<div class="columns large-10 large-offset-1">
 				<h2>Introduction</h2>
-				<p class="caption">This site will be used to showcase key milestones, outputs and be used to get your input throughout the project. We want you be as involved in this process as you would like to be and will strive to incorporate your input as we develop this platform. </p>
+				<p class="caption">The Development Data Hub (DDH) aims to provide a systematic approach for capturing, curating, cataloguing and disseminating data across the World Bank Group (WBG) in compliance with international standards and best practices. DDH will become the central system where the producers of data submit their data and the demand side of data finds and retrieves it.</p>
 
 				<hr>
 
 				<h3>Project Summary</h3>
 				<h4>Objectives</h4>
-				<p>This document provides a 1 page overview of what this project is and what is taking place for each web property, and who will be involved from our teams.</p>
+				<p>This project focuses on validating, optimizing, and recommendingdelivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
+
+				<p>There are two primary objectives of the Development Data Hub (DDH) concept:</p>
+
+				<ul>
+					<li>To address the identified need for data accessibility and issues around storage and curation of development data that are currently leading to fragmentation and inefficiencies.</li>
+					<li>To support the development of a hub to provide a systematic approach for capturing, cataloging, and disseminating data in compliance with international standards and best practices - key in improving the WBG’s capacity to manage its own development data.</li>
+				</ul>
 
 				<hr class="hidden">
 
-				<h4>Current Project Status</h4>
-				<p>For the latest overview of the status of the project and progress on key deliverables, please refer to the <a href="">Project Trello page</a> where all tasks and activities are being assigned, tracked, and executed.</p>
+				<h3>Approach</h3>
 
-				<hr class="hidden">
+					<p class="caption">Our consultative process revolves around design-thinking, human-centered design and collaboration. Each stage of the process undergoes a cycle of <strong>understand > design > do</strong> in order to be able to adapt and respond to inputs as they are discovered.</p>
 
-				<h4>Key Deliverables and Dates</h4>
-				<p>This document provides a 1 page overview of what this project is and what is taking place for each web property, and who will be involved from our teams.</p>
+					<img src="assets/images/HCD-Approach-DDH.png" />
 
-				<p>For more detail information, the <a href="">Project Work Plan is available here</a></p>
+					<p><strong>Understand</strong><br />
+					This phase focuses on information gathering from the DDH team and key internal stakeholders at the WBG in order to understand the problem from the eyes of those who interact with data on a daily basis. We will achieve this through preliminary interviews, discussions, reviewing processes and documentation to develop an accurate representation of the problem and what is an accurate measure of success. By understanding what success looks like to the primary stakeholders, we can better inform the do stage.</p>
 
-				<hr class="hidden">
-
-				<div class="blue">
-					<h5 class="color-blue">Landscape Analysis<span>May 6 – May 25</span></h5>
-
-					<p>The Landscape analysis and current state review involves the following phases:</p>
+					<h6>Key Tasks &amp; Deliverables</h6>
 					<ul>
-						<li>Strategy &amp; scope definition workshop</li>
-						<li>Knowledge Transfer around Micro Data Library, Open Data Catalogue, Data Deposit, External Open Data and other Data Sources to be identified</li>
-						<li>Literature Review</li>
+						<li>Knowledge Transfer</li>
+						<li>Landscape Analysis</li>
+						<li>Interviews</li>
 					</ul>
 
-					<p>The outcomes of this Landscape Analysis are:</p>
-
-					<ul>
-						<li>Create context for Workshop Design</li>
-						<li>Provide initial validation of Findings Mapping of final Strategy Report</li>
-					</ul>
-
-					<p>The analysis and review document will take close consideration of the Data Deposit, Central Internal Catalog, External Open Data and Micro Data Library Catalogs and other data systems and reports around World Bank Group data strategy developed to date. The objective of this document is to provide context for the workshops and provide a clear starting point to learn from what currently works and does not work within various data systems available.</p>
-
-					<h6>Documents and Deliverables</h6>
-
-					<ul>
-						<li><a href="">Landscape Review Document 1</a></li>
-						<li><a href="">Landscape Review Document 2</a></li>
-						<li><a href="">Landscape Review Document 3</a></li>
-					</ul>
 
 					<h6>Team Lead(s)</h6>
 					<ul class="leads">
@@ -135,35 +120,90 @@
 						</li>
 						<li>
 							<a href="">
+								<img src="assets/images/team/nk-profile.jpg" />
+								<p>Nicholas</p>
+							</a>
+						</li>
+					</ul>
+
+				<hr class="hidden">
+
+					<p><strong>Design</strong><br />
+					We fundamentally believe that there is a much higher likelihood of successful implementation when key internal stakeholders are engaged as co-creators in the process. As such a core part of our consultation process involves developing deliverables jointly through interactive workshops. These workshops will build off each other to refine each facet of the proposed strategy for the DDH.</p>
+
+					<h6>Key Tasks &amp; Deliverables</h6>
+					<ul>
+						<li>Surveys</li>
+						<li>Workshops</li>
+						<li>Additional Interviews</li>
+						<li>Feedback Cycle</li>
+					</ul>
+
+
+					<h6>Team Lead(s)</h6>
+					<ul class="leads">
+						<li>
+							<a href="">
 								<img src="assets/images/team/cb-profile.jpg" />
 								<p>Chad</p>
 							</a>
 						</li>
+						<li>
+							<a href="">
+								<img src="assets/images/team/nm-profile.jpg" />
+								<p>Neisan</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<img src="assets/images/team/ss-profile.jpg" />
+								<p>Scott</p>
+							</a>
+						</li>
 					</ul>
-				</div>
 
 				<hr class="hidden">
 
-				<h5 class="color-green">Interviews<span>May 8 – May 20</span></h5>
+					<p><strong>Do</strong><br />
+					Once initial design concepts have been developed through workshops we will begin to refine these concepts based on industry best-practice, insights from initial conversations and our experience implementing similar strategies. This will be then shared during various feedback sessions with DEC leadership to discuss any aspects of this prototype strategy that will need to be refined before its ultimate presentation to the Data Council group.</p>
+
+					<h6>Key Tasks &amp; Deliverables</h6>
+					<ul>
+						<li>Feedback Cycle</li>
+						<li>Strategy Development</li>
+						<li>Report Creation</li>
+						<li>Data Council Presentation</li>
+					</ul>
+
+
+					<h6>Team Lead(s)</h6>
+					<ul class="leads">
+						<li>
+							<a href="">
+								<img src="assets/images/team/nm-profile.jpg" />
+								<p>Neisan</p>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<img src="assets/images/team/ss-profile.jpg" />
+								<p>Scott</p>
+							</a>
+						</li>
+					</ul>
 
 				<hr class="hidden">
 
-				<h5 class="color-yellow">Workshops<span>Text</span></h5>
+				<h4>User Stories</h4>
 
-				<hr class="hidden">
+					<p>In order to better frame this consultation, recommendations for the DDH will be made with respect to three key audiences identified as primary focal areas. These audiences are Senior Management, Task-Team Leaders (TTLs), and Operators. A further distinction will be made between data producers and consumers where relevant.</p>
 
-				<h5 class="color-red">Strategy Report &amp; Supporting Documents<span>Text</span></h5>
+					<p>The advantage of this approach is to focus on clear needs and objectives of end users, and design a strategy that meets those needs in a specific context.</p>
 
-				<hr class="hidden">
+				<h4>Deliverable Mapping</h4>
 
-				<h4>Approach &amp; Methodology</h4>
-				<p>Our Approach and Methodology revolves around Discovering, Hypothesizing, Testing, Validating and Executing. This approach allows for an adaptable process that emphasizes.</p>
-
-
-
-				<hr class="hidden">
-				<img src ="assets/images/project-overview-1.1.png" />
-				<hr class="hidden">
+				<h4>Current Project Status</h4>
+					<p>For the latest overview of the status of the project and progress on key deliverables, please refer to the <a href="">Project Trello page</a> where all tasks and activities are being assigned, tracked, and executed.</p>
 
 				<hr>
 
