Added Deliverable Mapping

--- a/index.html
+++ b/index.html
@@ -76,28 +76,35 @@
 		<div class="grid">
 			<div class="columns large-10 large-offset-1">
 				<h2>Introduction</h2>
-				<p class="caption">The Development Data Hub (DDH) aims to provide a systematic approach for capturing, curating, cataloguing and disseminating data across the World Bank Group (WBG) in compliance with international standards and best practices. DDH will become the central system where the producers of data submit their data and the demand side of data finds and retrieves it.</p>
+					<p class="caption">The Development Data Hub (DDH) aims to provide a systematic approach for capturing, curating, cataloguing and disseminating data across the World Bank Group (WBG) in compliance with international standards and best practices. DDH will become the central system where the producers of data submit their data and the demand side of data finds and retrieves it.</p>
 
 				<hr>
 
 				<h3>Project Summary</h3>
-				<h4>Objectives</h4>
-				<p>This project focuses on validating, optimizing, and recommendingdelivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
+					<h4>Objectives</h4>
+						<p>This project focuses on validating, optimizing, and recommendingdelivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
 
-				<p>There are two primary objectives of the Development Data Hub (DDH) concept:</p>
+						<p>There are two primary objectives of the Development Data Hub (DDH) concept:</p>
 
-				<ul>
-					<li>To address the identified need for data accessibility and issues around storage and curation of development data that are currently leading to fragmentation and inefficiencies.</li>
-					<li>To support the development of a hub to provide a systematic approach for capturing, cataloging, and disseminating data in compliance with international standards and best practices - key in improving the WBG’s capacity to manage its own development data.</li>
-				</ul>
+						<ul>
+							<li>To address the identified need for data accessibility and issues around storage and curation of development data that are currently leading to fragmentation and inefficiencies.</li>
+							<li>To support the development of a hub to provide a systematic approach for capturing, cataloging, and disseminating data in compliance with international standards and best practices - key in improving the WBG’s capacity to manage its own development data.</li>
+						</ul>
 
-				<hr class="hidden">
+					<hr class="hidden">
+
+					<h4>Current Project Status</h4>
+						<p>For the latest overview of the status of the project and progress on key deliverables, please refer to the <a href="">Project Trello page</a> where all tasks and activities are being assigned, tracked, and executed.</p>
+
+				<hr>
 
 				<h3>Approach</h3>
 
 					<p class="caption">Our consultative process revolves around design-thinking, human-centered design and collaboration. Each stage of the process undergoes a cycle of <strong>understand > design > do</strong> in order to be able to adapt and respond to inputs as they are discovered.</p>
 
 					<img src="assets/images/HCD-Approach-DDH.png" />
+
+					<!--UNDERSTAND -->
 
 					<p><strong>Understand</strong><br />
 					This phase focuses on information gathering from the DDH team and key internal stakeholders at the WBG in order to understand the problem from the eyes of those who interact with data on a daily basis. We will achieve this through preliminary interviews, discussions, reviewing processes and documentation to develop an accurate representation of the problem and what is an accurate measure of success. By understanding what success looks like to the primary stakeholders, we can better inform the do stage.</p>
@@ -127,6 +134,8 @@
 					</ul>
 
 				<hr class="hidden">
+
+					<!--DESIGN -->
 
 					<p><strong>Design</strong><br />
 					We fundamentally believe that there is a much higher likelihood of successful implementation when key internal stakeholders are engaged as co-creators in the process. As such a core part of our consultation process involves developing deliverables jointly through interactive workshops. These workshops will build off each other to refine each facet of the proposed strategy for the DDH.</p>
@@ -164,6 +173,8 @@
 
 				<hr class="hidden">
 
+					<!--DO -->
+
 					<p><strong>Do</strong><br />
 					Once initial design concepts have been developed through workshops we will begin to refine these concepts based on industry best-practice, insights from initial conversations and our experience implementing similar strategies. This will be then shared during various feedback sessions with DEC leadership to discuss any aspects of this prototype strategy that will need to be refined before its ultimate presentation to the Data Council group.</p>
 
@@ -194,33 +205,23 @@
 
 				<hr class="hidden">
 
-				<h4>User Stories</h4>
+				<h3>Structure</h3>
+				<p>The framework by which the project will revolve around will be</p>
+					<img src="assets/images/deliverable-mapping.png" />
 
-					<p>In order to better frame this consultation, recommendations for the DDH will be made with respect to three key audiences identified as primary focal areas. These audiences are Senior Management, Task-Team Leaders (TTLs), and Operators. A further distinction will be made between data producers and consumers where relevant.</p>
+					<h4>User Stories</h4>
 
-					<p>The advantage of this approach is to focus on clear needs and objectives of end users, and design a strategy that meets those needs in a specific context.</p>
+						<p>In order to better frame this consultation, recommendations for the DDH will be made with respect to three key audiences identified as primary focal areas. These audiences are Senior Management, Task-Team Leaders (TTLs), and Operators. A further distinction will be made between data producers and consumers where relevant.</p>
 
-				<h4>Deliverable Mapping</h4>
+						<p>The advantage of this approach is to focus on clear needs and objectives of end users, and design a strategy that meets those needs in a specific context.</p>
 
-				<h4>Current Project Status</h4>
-					<p>For the latest overview of the status of the project and progress on key deliverables, please refer to the <a href="">Project Trello page</a> where all tasks and activities are being assigned, tracked, and executed.</p>
-
-				<hr>
-
-				<h4 class="color-red">Want to be involved or contribute your ideas?</h4>
-				<h5><span>Option 1:</span> <a href="https://volarre.typeform.com/to/jQTxoY">Short Survey</a></h5>
-				<p>This is a 5 minute survey for people who care about the broad goals of this project.</p>
-
-				<h4><span>Option 2:</span> <a href="https://volarre.typeform.com/to/NHd4CZ">Long Survey</a></h4>
-				<p>We’re excited you care about this project you are considering giving more of your input! This survey will take around 20 minutes and will get more indepth input around the project outputs.</p>
-
-				<h4><span>Option 3:</span> <a href="#">Talk to us!</a></h4> 
-				<p>We know, web forms are annoying. Who likes surveys anyway right?<br />Well - we are here to help, and happy to schedule a 20 minute call to talk to you about this project and get your input. <a href="mailto:nicholas@bivee.co">Please email us at nicholas@bivee.co</a>. </p>
-
+					<h4>Deliverable Mapping</h4>
+						<p>This</p>
+					
 				<hr>
 
 				<h3>Important Links</h3>
-				<h4>Objectives</h4>
+					<p>Most files and documents will be shared through Box. Any relevant files or links that need to be shared externally will be added to this section</p>
 				
 				<hr>
 
