--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
 				<h3>Project Summary</h3>
 					<h4>Objectives</h4>
-						<p>This project focuses on validating, optimizing, and recommendingdelivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
-
+						<p>This project focuses on validating, optimizing, and delivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
+				<br/>
 						<p>There are two primary objectives of the Development Data Hub (DDH) concept:</p>
 
 						<ul>
@@ -114,6 +114,7 @@
 						<li>Knowledge Transfer</li>
 						<li>Landscape Analysis</li>
 						<li>Interviews</li>
+						<li>5-page summary of key trends and identified requirements</li>
 					</ul>
 
 
