--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 				<h3>Project Summary</h3>
 					<h4>Objectives</h4>
-						<p>This project focuses on validating, optimizing, and recommendingdelivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
+						<p>This project focuses on validating, optimizing, and delivering a business strategy for the implementation of DDH that reflects industry best practices.</p>
 
 						<p>There are two primary objectives of the Development Data Hub (DDH) concept:</p>
 
